# Machine-Learning-W3

./: .gitignore  README.md  aqar.ipynb  aqar_data_profiling_report.html  aqar_preprocessed_data_profiling_report.html  fonts  housing.ipynb  keras_model.h5  main.py  model_comparison_results.csv  model_comparison_results.json  pyproject.toml  subset_aqar_data_profiling_report.html  viz.ipynb
notebooks/: aqar.ipynb  date_fruit.ipynb  housing.ipynb  model_comparison_results.csv  model_comparison_results.json  penguin.ipynb  titanic.ipynb
output/: aqar_preprocessed_data_profiling_report.html  model_comparison_results.json
output/penguins/: penguins_profile_report.html
output/titanic/: cv_scores_init.csv  cv_scores_more.csv  cv_scores_pipe.csv  cv_scores_pipe_median.csv  cv_scores_tuned.csv  titanic_submission.csv
