[project]
name = "w3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "lightgbm>=4.6.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "nbformat>=5.10.4",
    "setuptools>=80.9.0",
    "xgboost>=3.1.2",
    "ydata-profiling>=4.18.0",
]
